feat: adding entity framework and sqlite integration.

--- a/src/ECommerce.WebAPI/appsettings.json
+++ b/src/ECommerce.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ECommerceSqlite": "Data Source=ECommerceDB.db"
+  },
   "AllowedHosts": "*"
 }
